@@ -1,3 +1,8 @@
+2008-11-13  Steve Ellcey  <sje@cup.hp.com>
+
+	PR libgomp/37938
+	* config/linux/ia64/mutex.h: New.
+
 2008-11-04  Tobias Burnus  <burnus@net-b.de>
 
 	PR libgomp/37935
